--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,3 +1,8 @@
 <h2>Recipe</h2>
 <%= @recipe.name %>
-<
+<%= @recipe.ingredients %>
+<%= @recipe.cook_time %>
+
+<form method="POST" action="/posts/<%=@post.id%>/delete">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="delete">
