--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,7 +1,7 @@
 <h2>Recipe</h2>
 <%= @recipe.name %>
 <%= @recipe.ingredients %>
-<%= @recipe.cook_time %>s
+<%= @recipe.cook_time %>
 
 <form method="POST" action="/recipes/<%=@recipe.id%>/delete">
   <input id="hidden" type="hidden" name="_method" value="delete">
