--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -2,6 +2,6 @@
   <input id="hidden" type="hidden" name="_method" value="patch">
   <input type="text" name="name">
   <input type="text" name="ingredients">
-  <input type="integer" name="ingredients">
+  <input type="integer" name="cook_time">
   <input type="submit" value="submit">
 </form>
