--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,6 @@
 <h1> Recipes </h1>
-<li>
+
 <% @recipes.each do |recipe| %>
   <%= recipe.name %>
-  <a href="/recipes/<%= recipe.id %>
+  <a href="/recipes/<%=recipe.id </a>
   <% end %>
-</li>
