--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,5 @@
 <h1> Recipes </h1>
 
 <% @recipes.each do |recipe| %>
-  <%= recipe.name %>
-  <a href="/recipes/<%=recipe.id </a>
+  <a href="/recipes/<%=recipe.id <%= recipe.name %> </a>
   <% end %>
