--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -5,6 +5,6 @@
   <label>Ingredients:</label>
   <input type="text" name="ingredients">
   <label>Cook Time:</label>
-  <input type="number" name="cook_time">
+  <input type="text" name="cook_time">
   <input type="submit" value="submit">
 </form>
