--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,9 +1,10 @@
+<h2>Recipe</h2>
 Name: <%= @recipe.name %>
-Ingredients <%= @recipe.ingredients %>
-Cook time <%= @recipe.cook_time %>
+Ingredients: <%= @recipe.ingredients %>
+Cook Time: <%= @recipe.cook_time %>
 
-<form method="post" action="/recipes/<%=@recipe.id%>/delete">
-    <input id="hidden" type="hidden" name="_method" value="delete">
+<form method="POST" action="/recipes/<%=@recipe.id%>/delete">
+  <input id="hidden" type="hidden" name="_method" value="delete">
 
   <input type="submit" value="delete">
 </form>
